<resources>
    <string name="app_name">每讯律师</string>

    <string name="bottom_tab1">首页</string>
    <string name="bottom_tab2">新手</string>
    <string name="bottom_tab3">我的</string>
    <string name="bottom_tab4">资讯</string>
    <string name="bottom_tab5">咨询</string>

    <string name="msg_title">提示</string>

    <string name="double_click_exit">再按一次退出程序</string>
    <string name="feed_back_tips">尊敬的用户：
感谢使用我们的产品，如果在使用中遇到任何问题，
或者任何的意见和建议。欢迎在这里告诉我们，您的
每一条问题反馈对我们非常重要！</string>

    <string-array name="channel">
        <item>全部</item>
        <item>婚姻家事</item>
        <item>合同纠纷</item>
        <item>侵权纠纷</item>
        <item>公司并购</item>
        <item>知识产权</item>
        <item>劳动争议</item>
        <item>证券保险</item>
        <item>刑事及其他</item>
    </string-array>

    <string-array name="quick_reply">
        <item>耐心听取当事人叙述</item>
        <item>归纳分析问题准确</item>
        <item>法律分析精炼透彻、通俗易懂</item>
        <item>提供的法律建议合理适用</item>
    </string-array>
</resources>
